--- a/index.html
+++ b/index.html
@@ -18,10 +18,54 @@
         </nav>
         </<header>
           <div class="banner">
-            <img src="" alt="">
-
-
+            <img src="enissa-photo.jpg" alt="Header Photo">
+            <h1>Welcome to My Portfolio</h1>
           </div>
+
+        <main role="main">
+          <section id="about-me" class="class">
+            <div class="abt">
+              <h2>About Me</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+
+            <<div id ="Portfolio">
+              <article class="artwork-1">
+                <h3>Photography</h3>
+                <img src="jayla_edit_final.jpg" alt="jayla-photo">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              < a href="#" class="button">View Project</a>
+              </article>
+
+              <article class="artwork-2">
+                <h3>Movie Poster</h3>
+                <img src="movie-poster.jpg" alt="movie-poster">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<a href="#" class="button">View Project</a>
+              </article>
+
+              <article class="artwork-3">
+                <h3>Poster Design</h3>
+                 <img src="girl-poster.png" alt="girl-poster">
+                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <a href="#" class="button">View Poroject</a>
+              </article>
+
+              <article class="artwork-4">
+                <h3>Packaging</h3>
+                <img src="coffee-packaging.jpg" alt="coffe-package">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a href="#" class="button">View Project</a>
+
+                <<article class="artwork-5">
+                  <h3>Mockups</h3>
+                  <img src="" alt="">
+
+                </article>
+            </div>
+
+
+
 
 </body>
 </html>
