--- a/index.html
+++ b/index.html
@@ -56,13 +56,40 @@
                 <img src="coffee-packaging.jpg" alt="coffe-package">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <a href="#" class="button">View Project</a>
-
-                <<article class="artwork-5">
-                  <h3>Mockups</h3>
-                  <img src="" alt="">
-
                 </article>
+
+                <article class="artwork-5">
+                  <h3>Mockups</h3>
+                  <img src="phonecase.png" alt="phone-case">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <a href="#" class="button">View Project</a>
+                </article>
+
+                <article class="artwork-6">
+                  <h3>Portfolio Overiew</h3>
+                  <img src="overview-portfoli.jpg" alt="overview">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <a href="#" class="button">View Project</a>
+                  </article>
             </div>
+            </section>
+
+            <section id="contact me" class="class">
+              <div="class="">
+              <h2>Contact Me</h2>
+              <p>Email me at enissa2ciper@gmail.com if you are interested in working together and check out my social media for more work. </p>
+              <ul>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Facebook</a></li>
+              </ul>
+               </div>
+               </section>
+
+               </main>
+
+               <footer role="contentinfo">
+
 
 
 
